--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "jest-cli": "^21.0.0"
   },
   "dependencies": {
-    "elasticio-sailor-nodejs": "^2.2.0",
+    "aws-sdk": "^2.117.0",
     "elasticio-node": "^0.0.8",
+    "elasticio-sailor-nodejs": "^2.2.0",
     "request-promise": "^4.2.1"
   },
   "engines": {
