--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "scripts": {
     "pretest": "eslint . --fix",
+    "test": "NODE_ENV=test jest spec/*",
     "integration-test": "NODE_ENV=test jest spec-integration/*",
     "prepublish": "nsp check"
   },
