--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "npm": ">=5.4"
   },
   "scripts": {
-    "pretest": "node_modules/.bin/eslint lib spec spec-integration --ext .json --ext .js --fix",
+    "pretest": "node_modules/.bin/eslint lib spec spec-integration verifyCredentials.js --ext .json --ext .js --fix",
     "test": "NODE_ENV=test jest spec/*",
     "integration-test": "NODE_ENV=test jest spec-integration/*",
     "prepublish": "nsp check"
