--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.117.0",
+    "debug": "^3.0.1",
     "elasticio-node": "^0.0.8",
     "elasticio-sailor-nodejs": "^2.2.0",
     "request-promise": "^4.2.1"
