--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lambda"
   ],
   "devDependencies": {
+    "aws-sdk-mock": "^1.7.0",
     "eslint": "^4.1.0",
     "eslint-config-xo-space": "^0.16.0",
     "eslint-plugin-json": "^1.2.0",
