--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
   },
   "dependencies": {
     "aws-sdk": "^2.117.0",
-    "debug": "^3.0.1",
+    "debug": "^3.1.0",
     "elasticio-node": "^0.0.8",
     "elasticio-sailor-nodejs": "^2.2.0",
+    "jsonata": "^1.3.1",
     "request-promise": "^4.2.1"
   },
   "engines": {
