--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-lambda-component",
-  "version": "0.0.0",
+  "version": "1.0.1",
   "description": "elastic.io integration component that calls out to AWS Lambda API",
   "homepage": "https://elastic.io",
   "author": {
@@ -20,26 +20,23 @@
     "lambda"
   ],
   "devDependencies": {
-    "aws-sdk-mock": "^1.7.0",
-    "eslint": "^4.1.0",
-    "eslint-config-xo-space": "^0.16.0",
-    "eslint-plugin-json": "^1.2.0",
-    "eslint-plugin-mocha": "^4.11.0",
-    "jest": "^21.0.0",
-    "jest-cli": "^21.0.0",
-    "nsp": "^2.6.3"
+    "aws-sdk-mock": "1.7.0",
+    "eslint": "4.1.0",
+    "eslint-config-xo-space": "0.16.0",
+    "eslint-plugin-json": "1.2.0",
+    "eslint-plugin-mocha": "4.11.0",
+    "jest": "21.0.0",
+    "jest-cli": "21.0.0"
   },
   "dependencies": {
-    "aws-sdk": "^2.117.0",
-    "debug": "^3.1.0",
-    "elasticio-node": "^0.0.8",
-    "elasticio-sailor-nodejs": "^2.2.0",
-    "jsonata": "^1.3.1",
-    "request-promise": "^4.2.1"
+    "aws-sdk": "2.117.0",
+    "debug": "3.1.0",
+    "elasticio-node": "0.0.9",
+    "elasticio-sailor-nodejs": "2.6.19",
+    "jsonata": "1.3.1"
   },
   "engines": {
-    "node": "^8.4.0",
-    "npm": ">=5.4"
+    "node": "14"
   },
   "scripts": {
     "pretest": "node_modules/.bin/eslint lib spec spec-integration verifyCredentials.js --ext .json --ext .js --fix",
