--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "debug": "3.1.0",
     "elasticio-node": "0.0.9",
     "elasticio-sailor-nodejs": "2.6.19",
-    "jsonata": "1.3.1"
+    "jsonata": "1.3.1",
+    "request-promise": "4.2.6"
   },
   "devDependencies": {
     "@elastic.io/component-logger": "0.0.1",
