--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "elasticio-node": "0.0.9",
     "elasticio-sailor-nodejs": "2.6.19",
     "jsonata": "1.3.1",
-    "request-promise": "4.2.6"
+    "request-promise": "4.2.6",
+    "request": "2.88.2"
   },
   "devDependencies": {
     "@elastic.io/component-logger": "0.0.1",
