--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "aws-lambda-component",
-  "version": "0.0.0",
+  "version": "1.0.1",
   "description": "elastic.io integration component that calls out to AWS Lambda API",
   "homepage": "https://elastic.io",
   "author": {
     "name": "elasticio",
     "email": "info@elastic.io",
     "url": "https://elastic.io"
+  },
+  "engines": {
+    "node": "14"
   },
   "files": [
     "lib"
@@ -19,32 +22,27 @@
     "aws",
     "lambda"
   ],
-  "devDependencies": {
-    "aws-sdk-mock": "^1.7.0",
-    "eslint": "^4.1.0",
-    "eslint-config-xo-space": "^0.16.0",
-    "eslint-plugin-json": "^1.2.0",
-    "eslint-plugin-mocha": "^4.11.0",
-    "jest": "^21.0.0",
-    "jest-cli": "^21.0.0",
-    "nsp": "^2.6.3"
+  "scripts": {
+    "pretest": "node_modules/.bin/eslint lib spec verifyCredentials.js --ext .json --ext .js --fix",
+    "test": "NODE_ENV=test jest spec/*"
   },
   "dependencies": {
-    "aws-sdk": "^2.117.0",
-    "debug": "^3.1.0",
-    "elasticio-node": "^0.0.8",
-    "elasticio-sailor-nodejs": "^2.2.0",
-    "jsonata": "^1.3.1",
-    "request-promise": "^4.2.1"
+    "aws-sdk": "2.117.0",
+    "debug": "3.1.0",
+    "elasticio-node": "0.0.9",
+    "elasticio-sailor-nodejs": "2.6.19",
+    "jsonata": "1.3.1",
+    "request-promise": "4.2.6",
+    "request": "2.88.2"
   },
-  "engines": {
-    "node": "^8.4.0",
-    "npm": ">=5.4"
-  },
-  "scripts": {
-    "pretest": "node_modules/.bin/eslint lib spec spec-integration verifyCredentials.js --ext .json --ext .js --fix",
-    "test": "NODE_ENV=test jest spec/*",
-    "integration-test": "NODE_ENV=test jest spec-integration/*"
+  "devDependencies": {
+    "@elastic.io/component-logger": "0.0.1",
+    "aws-sdk-mock": "1.7.0",
+    "eslint": "7.14.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-plugin-import": "2.22.1",
+    "jest": "21.0.0",
+    "jest-cli": "21.0.0"
   },
   "eslintConfig": {
     "extends": "xo-space",
